apps/base/media/sym-sonarr/sym-sonarr-ingressroute.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: sym-sonarr-ingressroute
  namespace: media
  annotations:
    gethomepage.dev/href: "https://sym-sonarr.lab.mainertoo.com"
    gethomepage.dev/enabled: "true"
    gethomepage.dev/name: "Sym Sonarr"
    gethomepage.dev/description: "TV organizer for symlink stack"
    gethomepage.dev/app: sym-sonarr
    gethomepage.dev/group: "Media"
    gethomepage.dev/icon: "https://cdn.jsdelivr.net/gh/selfhst/icons/svg/sonarr.svg"
spec:
  entryPoints:
    - websecure
    - web
  routes:
    - match: Host(`sym-sonarr.lab.mainertoo.com`)
      kind: Rule
      middlewares:
        - name: authentik-sso
          namespace: traefik-system
      services:
        - name: sym-sonarr
          port: 8989
  tls: {}
